fix author list and title on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -88,7 +88,7 @@ p {
 /* Title */
 .jumbotron h1 {
     font-size: 52pt;
-    font-weight: 400;
+    font-weight: 500;
     color: #202020;
 }
 
